leaderboard score align css fix

--- a/Game.Engine/wwwroot/css/game.css
+++ b/Game.Engine/wwwroot/css/game.css
@@ -673,6 +673,10 @@ footer {
     display: none;
 }
 
+#leaderboard td:last-child {
+    text-align: right;
+}
+
 #overlay {
     position: absolute;
     top: 0;
